# E-Shield

./: .gitignore  ExamShield.docx  ExamShield_Pitch_Guide.html  ExamShield_Pitch_Guide.md  ExamShield_Presentation.pptx  ExamShield_Workflow.md  Makefile  PROBLEM_STATEMENT.md  README.md  SETUP.md  TEAM_SPLIT.md  TECH_STACK.md  append_todos.py  append_todos_10.py  context.md  docker-compose.yml  implementation_plan.md  test_script.py  test_script2.py
app/: README.md
backend/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py
backend/app/api/: README.md  __init__.py  deps.py  schemas.py
backend/app/api/routes/: __init__.py  calibration.py  evaluation.py  ingestion.py  pipeline.py  results.py  training.py
backend/app/calibration/: README.md  __init__.py  template_io.py
backend/app/engines/: README.md  __init__.py  copycatch.py  marksafe.py  reeval_guard.py  rubriclens.py  scriptid.py
backend/app/evaluation/: README.md  __init__.py  concept_coverage.py  feedback.py  report.py  scorer.py  similarity.py
backend/app/ingestion/: README.md  __init__.py  blankcheck.py  pdf_loader.py  preprocess.py
backend/app/models/: README.md  __init__.py  embedder.py  mark_model.py  nli.py
backend/app/ocr/: README.md  __init__.py  ambiguity.py  confidence.py  digit_ocr.py  handwriting_ocr.py  prose_ocr.py
backend/app/pipeline/: README.md  __init__.py  general_grader.py  grade_pipeline.py  model_a_reader.py  orchestrator.py
backend/app/segmentation/: README.md  __init__.py  answer_matcher.py  line_segmenter.py  question_segmenter.py
backend/app/services/: README.md  __init__.py  batch_service.py  evaluation_service.py
backend/app/storage/: README.md  __init__.py  db.py  json_store.py  schema.sql
backend/app/training/: README.md  __init__.py  dataset_builder.py  evaluate.py  features.py  trainer.py
backend/app/utils/: README.md  __init__.py  db_backup.py  image_ops.py  logging.py  logging_config.py  rate_limiter.py  security.py
backend/tests/: __init__.py  test_e2e_pipeline.py  test_engines.py  test_evaluation.py  test_ingestion.py  test_ocr.py  test_segmentation.py  test_storage.py
dataset/: DataSet-1_README.md  DataSet-1_file_list.txt  README.md
docs/: 01_ALREADY_IMPLEMENTED.md  02_TO_BE_IMPLEMENTED.md  03_BUSINESS_MODEL.md  04_WORKING_PROCESS.md  05_FEATURE_ENHANCEMENTS.md  ANTI_CHEATING.md  API_CONTRACT.md  DATA_FLOW.md  (+42 more)
(+122 files in other folders)
