[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "e-shield-backend"
version = "0.1.0"
description = "E-Shield backend — OCR + ML evaluation pipeline for exam script integrity"
requires-python = ">=3.11"

[tool.pytest.ini_options]
# Config lives in backend/, so rootdir is backend/. "." puts backend/ on sys.path
# (so `import app` resolves), and tests live in backend/tests. Run: `cd backend && pytest`.
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
